<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Place In Space</string>

    <string name="action_search">Search</string>
    <string name="action_share">Share</string>
    <string name="action_news">News</string>
    <string name="action_directions">Directions</string>
    <string name="action_call">Call</string>
    <string name="address">address:</string>
    <string name="phone">phone:</string>
    <string name="more">see more …</string>

    <string name="share_place_text">Check this cool place out! I love it!</string>
    <string name="share_place_with">Tell your friends about this place!</string>

    <string name="share_app_with">Tell your friends about us!</string>
    <string name="share_app_text">Place in Space is a new app that shares 1 minute videos about super awesome places around the world! Check it out! http://placeins.com</string>

    <string name="no_location">Your location has not been set</string>
    <string name="no_direction">Direction has not been set</string>

    <string name="splash_text">Loading data, please wait …</string>
    <string name="splash_try_again">Please check your internet connection.\n And touch the screen to try again.</string>

    <string name="jsonError">Data load error, please inform us about that</string>
    <string name="error_player">An error initializing the YouTube, please try again or inform us about that</string>
    <!-- debug
        <string name="google_maps_key">AIzaSyBUDp3_VeHWDw-xoRbeBQDT8qdT4gtVCMg</string>
     release
         <string name="google_maps_key">AIzaSyBtLXu-SpuSVF0rDyKQ2moXjqd4xHcAEFw</string>
    -->
    <string name="google_maps_key">AIzaSyBtLXu-SpuSVF0rDyKQ2moXjqd4xHcAEFw</string>

    <string-array name="nav_drawer_items">
        <item>All places</item>
        <item>Restaurants</item>
        <item>Pubs &amp; Bars</item>
        <item>Coffee &amp; Tea</item>
        <item>Health &amp; Medical</item>
        <item>Shopping</item>
        <item>Nightlife</item>
        <item>Arts &amp; Entertainment</item>
        <item>Intellectual clubs</item>
        <item>Sport &amp; Fitness</item>
        <item>Beauty &amp; Spa</item>
        <item>Hotels &amp; Hostels</item>
        <item>PlaceInCity</item>
        <item>Other</item>
        <item>CENTRAL OFFICE</item>
    </string-array>

    <array name="nav_drawer_icons">
        <item>@drawable/all</item>
        <item>@drawable/restaurant</item>
        <item>@drawable/pub</item>
        <item>@drawable/coffee</item>
        <item>@drawable/health</item>
        <item>@drawable/shopping</item>
        <item>@drawable/night</item>
        <item>@drawable/arts</item>
        <item>@drawable/intellectual</item>
        <item>@drawable/sport</item>
        <item>@drawable/beauty</item>
        <item>@drawable/hotels</item>
        <item>@drawable/city</item>
        <item>@drawable/other</item>
        <item>@drawable/ic_launcher</item>
    </array>
</resources>
